# CMake-Toturail

./: Kiến thức về Cmake.txt  README.md
1.HelloWorld/: CMakeLists.txt  Makefile  main.cc
2.BasicProject/: CMakeLists.txt
3.INTERMEDIATEPROJECT/: CMakeLists.txt
3.INTERMEDIATEPROJECT/app/: CMakeLists.txt  main.cc
3.INTERMEDIATEPROJECT/src/my_lib/: CMakeLists.txt  mylib1.cc
4.VARIABLEOPTION/: CMakeLists.txt
4.VARIABLEOPTION/app/: CMakeLists.txt
4.VARIABLEOPTION/src/my_lib/: CMakeLists.txt  mylib1.h
5.CONFIGFILES/config_file/: config.hpp.in
5.CONFIGFILES/src/my_lib/: CMakeLists.txt
6.SOURCEANDHEADER/: CMakeLists.txt
6.SOURCEANDHEADER/app/: CMakeLists.txt  main.cc
7.EXTERNALGITSUBMODULE/: CMakeLists.txt
7.EXTERNALGITSUBMODULE/app/: CMakeLists.txt  main.cc
7.EXTERNALGITSUBMODULE/cmake/: AddGitSubmodule.cmake
7.EXTERNALGITSUBMODULE/src/my_lib/: CMakeLists.txt
